# litho

./: Ejemplos.ipynb  README.html  README.md  setup.cfg
scripts/: inputs_lit.py  rhe_params.py  vars_expected.py  vars_stats.py
scripts/exploration/: data_extractors.py  parameter_variations.py  parameters_thermal.py  results_template.py  rheo_mosaic.py  scd_vs_bdt_mosaic.py  teq_vs_tef_mosaic.py
scripts/exploration/thermal/: data_extractors.py  parameter_variations.py  thermal_TM1_TM2_difference.py  thermal_explorations_old.py  thermal_model_differences.py  thermal_parameters_differences_TM1.py  thermal_parameters_differences_TM2.py  thermal_parameters_differences_TM3.py  thermal_results.py
scripts/minimization/: gradient_descent.py
src/litho/: __init__.py  colormaps.py  data.py  equations.py  mechanic.py  plots.py  rasterize.py  stats.py  thermal.py  utils.py
src/litho/.ipynb_checkpoints/: __init__-checkpoint.py  data-checkpoint.py  equations-checkpoint.py  mechanic-checkpoint.py  plot-checkpoint.py  plots-checkpoint.py  stats-checkpoint.py  thermal-checkpoint.py  utils-checkpoint.py
src/litho/data/.ipynb_checkpoints/: shf_data-checkpoint.txt  shf_data_mem-checkpoint.txt
src/litho/data/Te_invertido/: te_pg.py  te_tassara.py  utils.py
src/litho/data/Te_invertido/Imgs/: PG_07.xcf  Tassara_07.xcf
src/litho/data/Te_invertido/Interpolados/: Te_PG_400.txt  Te_PG_400_df.csv  Te_PG_600.txt  Te_PG_600_df.csv  Te_PG_800.txt  Te_PG_800_df.csv  Te_Tassara.txt  Te_Tassara_df.csv
src/litho/data/earthquakes/: 2023_import.py
(+13 files in other folders)
